Refactor the auth middlewares, VerifyToken now verify and refresh the token properly. Add the middleware on openai routes. New /whoami route return user info from procketbase if logged in
