# apps/go-api/internal/routes/router.go
@@ -1,19 +1,26 @@
 package routes
 
 import (
+	"github.com/bnema/flem/go-api/internal/middlewares"
 	"github.com/bnema/flem/go-api/pkg/types"
 	"github.com/gin-gonic/gin"
 )
 
 func SetupRouter(app *types.App) *gin.Engine {
 	r := gin.Default()
+	r.Use(middlewares.SessionMiddleware(app))
 	v1 := r.Group("/api/v1")
 	{
 		eg := v1.Group("/example")
 		{
 			eg.GET("/helloworld", Helloworld)
 		}
-		// Add the LoginRoute and RedirectRoute handlers
+
+		whoAmIRoute := v1.Group("/whoami")
+		whoAmIRoute.Use(middlewares.VerifyToken(app))
+		{
+			whoAmIRoute.GET("", WhoAmI(app))
+		}
 		v1.GET("/login", func(c *gin.Context) {
 			LoginRoute(app, c)
 		})
@@ -21,7 +28,7 @@ func SetupRouter(app *types.App) *gin.Engine {
 			RedirectRoute(app, c)
 		})
 		tmdb := v1.Group("/tmdb")
-		// tmdb.Use(middlewares.IsLoggedIn(app), middlewares.VerifyToken(app)) // Using your middlewares here
+		// tmdb.Use(middlewares.IsLoggedIn(app), middlewares.VerifyToken(app))
 		{
 			tmdb.POST("/movies/post/title", TMDBMovieByTitleRouteHandler)
 			tmdb.POST("/movies/post/ids", TMDBMoviesByIDSRouteHandler)
@@ -29,6 +36,7 @@ func SetupRouter(app *types.App) *gin.Engine {
 			tmdb.GET("/movies/random10", TMDBRandomMoviesRouteHandler)
 		}
 		openai := v1.Group("/openai")
+		openai.Use(middlewares.VerifyToken(app))
 		{
 			openai.POST("/movies", SuggestMoviesFromGPT3RouteHandler(app))
 			openai.POST("/translate", TranslateMoviesFromGPT3RouteHandler(app))
